[gd_scene load_steps=20 format=3 uid="uid://cva3jmdk0sqdm"]

[ext_resource type="Script" uid="uid://dgjnqo7dn7jol" path="res://scripts/character.gd" id="1_ac1ej"]
[ext_resource type="Script" uid="uid://cckf6x335dlsg" path="res://scripts/scaleObject.gd" id="2_dq4aw"]
[ext_resource type="Script" uid="uid://bvbkjoatblpq3" path="res://scripts/power_indicator.gd" id="3_dq4aw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ac1ej"]
albedo_color = Color(0.83448726, 0.78031343, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ufxs0"]
material = SubResource("StandardMaterial3D_ac1ej")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_6we3w"]
points = PackedVector3Array(-0.12520654, -0.532801, -0.4805069, 0.022783129, 0.4760704, 0.49888408, 0.16971254, 0.5591441, 0.46417162, 0.23105091, -0.8035912, 0.32045516, 0.40741014, 0.651043, -0.24352328, -0.4827893, 0.59484255, 0.082213186, -0.3628679, -0.68231165, 0.2896967, 0.46904355, -0.65452886, -0.06627126, -0.12744367, 0.8427015, -0.33810276, -0.39343542, -0.6839421, -0.24471663, 0.43825462, 0.62330925, 0.20084947, 0.0841477, 0.977454, 0.11479468, -0.06820232, -0.9764576, -0.12927033, 0.20054972, -0.56312895, -0.4514544, -0.18552664, 0.59545326, -0.4534751, -0.27336287, 0.59226835, 0.40775412, -0.0069364863, -0.47682306, 0.49966025, 0.37582088, -0.5886136, 0.31695515, 0.111579016, 0.5630594, -0.48117727, -0.41725034, 0.5278656, -0.27049688, -0.48454633, -0.59697217, -0.06650971, -0.27974695, 0.90856135, 0.05333608, -0.25019687, -0.8807117, 0.20531891, 0.263647, -0.90277094, -0.1273943, 0.29336792, 0.8715263, -0.15719566, 0.3734115, -0.5263189, -0.32824618, 0.4996626, 0.47664148, -0.0068885577, 0.053105574, 0.8750009, 0.32470253, -0.15454252, -0.5908538, 0.4658794, -0.09727988, -0.7823577, -0.39818847, -0.3876489, -0.49817133, 0.31564978, -0.30067965, -0.58799505, -0.38890144)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iqu8w"]
albedo_color = Color(0.8965428, 0.8928584, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dq4aw"]

[sub_resource type="SphereMesh" id="SphereMesh_xvr75"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xvr75"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tgck5"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="PrismMesh" id="PrismMesh_57kla"]

[sub_resource type="BoxMesh" id="BoxMesh_dq4aw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_keqbv"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_57kla"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ac1ej"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 0
properties/1/path = NodePath(".:sync_position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:sync_rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:sync_head_rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:sync_health")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_healthfill"]
bg_color = Color(0.07040397, 0.3238471, 0.06693058, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_health3d"]
shading_mode = 0
albedo_color = Color(0.07040397, 0.3238471, 0.06693058, 1)

[sub_resource type="BoxMesh" id="BoxMesh_health3d"]
material = SubResource("StandardMaterial3D_health3d")
size = Vector3(0.8, 0.08, 0.02)

[node name="player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_ac1ej")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_ufxs0")

[node name="Nametag" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
billboard = 1
no_depth_test = true
text = "Player"
font_size = 48
outline_size = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_6we3w")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4069364, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5801393, 0)
script = ExtResource("2_dq4aw")
highlight_material = SubResource("StandardMaterial3D_iqu8w")
power_indicator_path = NodePath("../../CanvasLayer/PowerIndicator")

[node name="eye" type="MeshInstance3D" parent="Head/Camera3D"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.12243241, -0.55118334, -0.4216762)
material_override = SubResource("StandardMaterial3D_dq4aw")
cast_shadow = 0
mesh = SubResource("SphereMesh_xvr75")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Head/Camera3D/eye"]
transform = Transform3D(0.20000002, 0, 0, 0, 0.20000002, 0, 0, 0, 0.20000002, 0.2000618, 0, -0.3859446)
material_override = SubResource("StandardMaterial3D_xvr75")
cast_shadow = 0
mesh = SubResource("SphereMesh_xvr75")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Head/Camera3D/eye"]
transform = Transform3D(0.20000002, 0, 0, 0, 0.20000002, 0, 0, 0, 0.20000002, -1.4173992, 0, -0.3859446)
material_override = SubResource("StandardMaterial3D_xvr75")
cast_shadow = 0
mesh = SubResource("SphereMesh_xvr75")
skeleton = NodePath("../..")

[node name="eye2" type="MeshInstance3D" parent="Head/Camera3D"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.11947179, -0.55118334, -0.4216762)
material_override = SubResource("StandardMaterial3D_dq4aw")
cast_shadow = 0
mesh = SubResource("SphereMesh_xvr75")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.19449592, 0, 0, 0, 1, -0.008913994, -0.03534293, 0)
material_override = SubResource("StandardMaterial3D_tgck5")
cast_shadow = 0
mesh = SubResource("PrismMesh_57kla")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Head/Camera3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.026699785, 0, 0, 0, 0.06471497, -0.008913994, -0.95586884, -0.47904867)
material_override = SubResource("StandardMaterial3D_tgck5")
cast_shadow = 0
mesh = SubResource("BoxMesh_dq4aw")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Head/Camera3D"]
transform = Transform3D(-5.7563248e-09, -0.11595219, 0, 0.13168934, -5.0684306e-09, 0, 0, 0, 0.06471497, -0.008913994, -1.036026, -0.47904867)
material_override = SubResource("StandardMaterial3D_keqbv")
cast_shadow = 0
mesh = SubResource("BoxMesh_dq4aw")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Head/Camera3D"]
transform = Transform3D(-1.1381217e-09, -0.040221646, 0, 0.026037188, -1.7581437e-09, 0, 0, 0, 0.02077231, -0.008913994, -0.7576355, -0.5016387)
material_override = SubResource("StandardMaterial3D_57kla")
cast_shadow = 0
mesh = SubResource("BoxMesh_dq4aw")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ac1ej")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PowerIndicator" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.125
offset_top = -19.125
offset_right = 19.125
offset_bottom = 19.125
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_dq4aw")
radius = 5.0

[node name="CartHint" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -120.0
offset_right = 100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "Press F to drive"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBarUI" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 70.0

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HealthBarUI"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_styles/fill = SubResource("StyleBoxFlat_healthfill")
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="CanvasLayer/HealthBarUI"]
layout_mode = 0
offset_top = 28.0
offset_right = 200.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "100/100"

[node name="DeathOverlay" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="DeathLabel" type="Label" parent="CanvasLayer/DeathOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -30.0
offset_right = 150.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "Respawning"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.55, 0)
mesh = SubResource("BoxMesh_health3d")
surface_material_override/0 = SubResource("StandardMaterial3D_health3d")
